2022-02-20  Roland Winkler  <winkler@gnu.org>
	Establish record-addresses associations before annotating records.
	* lisp/bbdb.el (bbdb-mua-interactive-action): Renamed from
	bbdb-mua-update-interactive-p.
	(bbdb-mua-auto-action): Renamed from bbdb-mua-auto-update-p.
	(bbdb-mua-action): Renamed from bbdb-update-records-p.
	(bbdb-message-clean-mail-function): Renamed from
	bbdb-canonicalize-mail-function.
	(bbdb-message-ignore-mail-re, bbdb-message-ignore-name-re)
	(bbdb-record-address-alist-function): New variables.
	(bbdb-offer-to-create): Internal variable removed.
	(bbdb-clean-address-components): Use bbdb-message-ignore-mail-re
	and bbdb-message-ignore-name-re.
	* lisp/bbdb-mua.el (bbdb-mua-interactive-action): Renamed from
	bbdb-mua-update-interactive-p.
	(bbdb-update-records): Establish record-addresses associations
	before annotating records.  Use
	bbdb-record-address-alist-function.
	(bbdb-query-create): Provide return value.
	(bbdb-annotate-message): Perform action per record and
	address-list.
	* README: Update lingo.

2022-02-20  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el, configure.ac: Increase version number to 3.2.1.

2022-02-10  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-mua-update-records): New versions of mu4e
	use gnus-article-buffer instead of mu4e~view-buffer-name.

2022-02-10  Roland Winkler  <winkler@gnu.org>
	Update copyright.  Quieten compiler.
	* lisp/bbdb.el: Require cl-lib.

2021-01-07  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-sc.el: Add third arg to define-obsolete-variable-alias
	and define-obsolete-function-alias.

2020-09-28  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-sc.el (bbdb-sc-attribution-field): Quieten compiler.

2020-09-28  Stefan Monnier <monnier@iro.umontreal.ca>
	* lisp/bbdb.el, lisp/bbdb-tex.el, lisp/bbdb-migrate.el: Require
	cl-lib.

2020-08-29  David Maus <dmause@dmaus.name>
	Use wl sticky buffer name if necessary.
	* lisp/bbdb-wl.el (bbdb/wl-header): Use wl sticky buffer name if