@@ -1,3 +1,10 @@
+2022-02-23  Roland Winkler  <winkler@gnu.org>
+	Bugfix and polish previous patch.
+	* lisp/bbdb.el (bbdb-mua-auto-action): Fix docstring.
+	* lisp/bbdb-mua.el (bbdb-accept-message, bbdb-ignore-message)
+	(bbdb-select-message, bbdb-annotate-message): Fix docstring.
+	(bbdb-update-records): Fix action query.
+
 2022-02-20  Roland Winkler  <winkler@gnu.org>
 	Establish record-addresses associations before annotating records.
 	* lisp/bbdb.el (bbdb-mua-interactive-action): Renamed from
